# liblambdaOJ2

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md
doc/: lambdaOJ2.md
include/: compile.h  run_task.h
python_package/: setup.py
python_package/lambdaOJ2/: __init__.py  consts.py  judge.py
python_package/oj/: __init__.py  judge.py
python_package/test/: README.md  test.py
python_package/test/test_case/src/: ac.c  bad_syscall.c  ole.c  tle.c  wa.c
src/: CMakeLists.txt  compile.c  compile_code.c  judge.c  run_task.c
tests/: build_test_env.sh  run.sh  test.py
tests/test_case/src/: ce.c  mle.c  re.c  re2.c
tools/: docker_judge.py  gen_syscall_black_list.py
